--- a/src/components/certificates-sidebar/styles/index.module.scss
+++ b/src/components/certificates-sidebar/styles/index.module.scss
@@ -14,7 +14,6 @@
   }
 
   .content {
-    padding: 0 var(--pv-size-base-2);
     flex-grow: 1;
     overflow-y: auto;
     max-height: 100%;
